# Applied-AI

./: generate_all_modules.js  pyproject.toml
course-content/: README.md
gen-ai-course/05_mcp/04_mcp_enterprise_project/: .env.dev  .env.example  .env.prod  .env.qa  Dockerfile  README.md  pyproject.toml
gen-ai-course/05_mcp/04_mcp_enterprise_project/src/enterprise_mcp/: __init__.py  auth.py  config.py  http_app.py  server.py  telemetry.py
gen-ai-course/05_mcp/04_mcp_enterprise_project/tests/: test_auth.py  test_config.py  test_contract_schemas.py  test_server.py
gen-ai-course/14_ai_projects/book_recommender/: .env.example  .gitignore  INTERVIEW.md  README.md  pyproject.toml
gen-ai-course/14_ai_projects/book_recommender/infra/: ai_search.bicep  container_app.bicep  main.bicep
gen-ai-course/14_ai_projects/book_recommender/src/: main.py
gen-ai-course/14_ai_projects/book_recommender/src/recommender/: config.py  ingestion.py  main.py  models.py  recommender.py  retrieval.py
gen-ai-course/14_ai_projects/book_recommender/src/recommender/ingestion/: chunker.py  embedder.py  indexer.py
gen-ai-course/14_ai_projects/book_recommender/src/recommender/recommendation/: pipeline.py
gen-ai-course/14_ai_projects/book_recommender/src/recommender/retrieval/: reranker.py  search.py
gen-ai-course/14_ai_projects/book_recommender/src/recommender/utils/: logger.py
gen-ai-course/14_ai_projects/book_recommender/tests/: test_pipeline.py  test_search.py
gen-ai-course/14_ai_projects/customer_support_engine/: INTERVIEW.md  README.md  pyproject.toml
gen-ai-course/14_ai_projects/customer_support_engine/frontend/: package-lock.json  package.json  tailwind.config.js
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/: App.tsx  index.css  main.tsx
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/components/chat/: ChatInputBar.tsx  ChatPanel.tsx  ConversationHeader.tsx  ConversationSidebar.tsx  EmptyChat.tsx  MessageBubble.tsx  MessageList.tsx  MessageSkeleton.tsx  TypingIndicator.tsx
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/components/dashboard/: IssueTypeChart.tsx  KpiCard.tsx  ResolutionTrendChart.tsx  SeverityBarChart.tsx
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/components/history/: HistoryCard.tsx  HistoryFilters.tsx  HistoryList.tsx  HistorySearch.tsx
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  SidebarItem.tsx  TopBar.tsx
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/components/settings/: SettingsForm.tsx  ThemeToggle.tsx
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/constants/: routes.ts  severity.ts  status.ts
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/hooks/: useAnalytics.ts  useConversation.ts  useConversationHistory.ts  useHealthCheck.ts  useTheme.ts  useToast.ts  useWebSocket.ts
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/lib/: api.ts  storage.ts  utils.ts  websocket.ts
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  HistoryPage.tsx  NotFoundPage.tsx  SettingsPage.tsx
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/store/: conversationStore.ts  historyStore.ts  settingsStore.ts
gen-ai-course/14_ai_projects/customer_support_engine/frontend/src/types/: api.ts  conversation.ts
gen-ai-course/14_ai_projects/customer_support_engine/src/: main.py
gen-ai-course/14_ai_projects/customer_support_engine/src/support/: config.py
gen-ai-course/14_ai_projects/customer_support_engine/src/support/graph/: builder.py  edges.py  nodes.py  state.py
gen-ai-course/14_ai_projects/customer_support_engine/src/support/memory/: checkpointer.py
gen-ai-course/14_ai_projects/customer_support_engine/src/support/tools/: escalation.py  kb_search.py
gen-ai-course/14_ai_projects/multi_agent_researcher/: INTERVIEW.md  README.md  pyproject.toml
gen-ai-course/14_ai_projects/multi_agent_researcher/src/: main.py
gen-ai-course/14_ai_projects/multi_agent_researcher/src/researcher/: config.py
gen-ai-course/14_ai_projects/multi_agent_researcher/src/researcher/crew/: agents.py  crew_builder.py  tasks.py
gen-ai-course/14_ai_projects/multi_agent_researcher/src/researcher/tools/: memory_tool.py  search_tool.py  web_search_tool.py
plans/: Gen_ai_toc.md  (+1 more)
(+452 files in other folders)
