[project]
name = "applied-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "en-core-web-sm",
    "langchain-text-splitters>=0.2.0",
    "nltk>=3.9.3",
    "pydantic>=2.12.5",
    "regex>=2026.2.28",
    "sentence-transformers>=5.3.0",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
