[project]
name = "book-recommender"
version = "0.1.0"
description = "LLM-powered semantic book recommendation with Azure AI Search"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "azure-search-documents>=11.4.0",
    "azure-identity>=1.15.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "jupyter>=1.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recommender"]

[tool.hatch.build.targets.sdist]
include = ["/src"]
